# furl

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  install.sh
.github/workflows/: ci.yml  release.yml
docs/: DEVIATIONS.md  MIGRATION.md  index.md
examples/: float_repr_harness.rs  json_parse_harness.rs  nested_json_harness.rs
extras/completions/: _furl  furl.bash  furl.fish
extras/man/: furl.1
packaging/: furl.rb
src/: config.rs  cookies.rs  download.rs  encoding.rs  errors.rs  help.rs  lib.rs  netrc.rs  paths.rs  proxy.rs  run.rs  session.rs  status.rs
src/cli/: args.rs  items.rs  items_tests.rs  mod.rs  options.rs  parser.rs  parser_tests.rs  request_items.rs  urls.rs
src/cli/nested_json/: interpreter.rs  lexer.rs  mod.rs  parser.rs  proptests.rs  tests.rs
src/json/: mod.rs  parse.rs  ser.rs  tests.rs
src/manager/: export_args.rs  mod.rs  sessions.rs  tests.rs
src/output/: color.rs  format.rs  message.rs  mod.rs
src/output/color/: mod.rs  styles_generated.rs
src/request/: body.rs  digest.rs  headers.rs  mod.rs  tests.rs  urlencode.rs
src/transport/: mod.rs  tests.rs  tls.rs
