[package]
name = "furl-http"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "furl: a human-friendly command-line HTTP client for the API era"
readme = "README.md"
homepage = "https://github.com/o1x3/furl"
repository = "https://github.com/o1x3/furl"
license = "MIT OR Apache-2.0"
keywords = ["http", "cli", "client", "api", "curl"]
categories = ["command-line-utilities", "web-programming::http-client"]

[lib]
name = "furl"
path = "src/lib.rs"

[[bin]]
name = "furl"
path = "src/bin/furl.rs"

[[bin]]
name = "furls"
path = "src/bin/furls.rs"

[[bin]]
name = "furl-manager"
path = "src/bin/furl-manager.rs"

[dependencies]
base64 = "0.22.1"
# WHATWG-registry text encodings: response decoding and label validation.
encoding_rs = "0.8"
flate2 = "1.1.9"
httparse = "1.10.1"
md-5 = "0.11.0"
mime_guess = "2.0.5"
quick-xml = "0.41.0"
rpassword = "7.5.4"
rustls = "0.23.41"
rustls-pki-types = "1.15.0"
rustls-platform-verifier = "0.7.0"
sha2 = "0.11.0"
url = "2.5.8"

[dev-dependencies]
proptest = "1.11.0"
# Convenience only (json! literals in tests, harness plumbing); the
# library itself uses its own JSON implementation.
serde_json = "1"
tempfile = "3.27.0"

[profile.release]
lto = "thin"
strip = "symbols"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
dbg_macro = "warn"
todo = "warn"
print_stdout = "allow"
